FileInputStream.available() fails with "Incorrect function" for "nul" path (win)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 24
    • Affects Version/s: 24
    • Component/s: core-libs
    • None
    • b27
    • generic
    • windows

      jshell> File f = new File("nul")
      f ==> nul

      jshell> InputStream s = new FileInputStream(f)
      s ==> java.io.FileInputStream@7e9a5fbe

      jshell> s.available()
      | Exception java.io.IOException: Incorrect function
      | at FileInputStream.available0 (Native Method)
      | at FileInputStream.available (FileInputStream.java:498)
      | at (#6:1)

            Assignee:
            Brian Burkhalter
            Reporter:
            Brian Burkhalter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: