8342086: FileInputStream.available() fails with "Incorrect function" for "nul" path (win)